Fix multi-line links not being left-aligned
I.e, when "References to this record" lines are overflowing

--- a/specifyweb/frontend/js_src/css/main.css
+++ b/specifyweb/frontend/js_src/css/main.css
@@ -163,7 +163,8 @@
 
   .link {
     @apply text-black dark:text-gray-200 cursor-pointer disabled:!ring-0
-      enabled:hover:text-brand-300 gap-2 inline-flex items-center active:underline;
+      enabled:hover:text-brand-300 gap-2 inline-flex items-center
+      active:underline text-left;
   }
 
   a.link {
